<?xml version="1.0" encoding="utf-8"?>
<!-- TODO 3 : modify layout file-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="interestDataSet"
            type="com.example.myapplication.InterestDataSet" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondFragment">

        <TextView
            android:id="@+id/textview_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/buttonSecond"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSecond"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="32dp"
            android:text="@string/close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textview_second"
            app:layout_constraintStart_toStartOf="@+id/textview_second" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textViewBank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/bank"
            app:layout_constraintEnd_toStartOf="@+id/textview_second"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewInterest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/interestRate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textview_second"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewBankContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@{interestDataSet.bank}"
            app:layout_constraintEnd_toEndOf="@+id/textViewBank"
            app:layout_constraintStart_toStartOf="@+id/textViewBank"
            app:layout_constraintTop_toBottomOf="@+id/textViewBank" />

        <TextView
            android:id="@+id/textViewInterestContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@{interestDataSet.interest}"
            app:layout_constraintEnd_toEndOf="@+id/textViewInterest"
            app:layout_constraintStart_toStartOf="@+id/textViewInterest"
            app:layout_constraintTop_toBottomOf="@+id/textViewInterest" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>